Templates: per-template Delete in Templates dropdown.
and fixed carets

--- a/public/tomorrow.html
+++ b/public/tomorrow.html
@@ -106,7 +106,7 @@
                     class="absolute top-0 left-0 -translate-x-1/2 -translate-y-1/2 h-20" />
                 <div class="text-right">
                     <button type="button">
-                        <i class="fa-solid fa-caret-up text-neutral scale-250 hover:cursor-pointer"></i>
+                        <i class="fa-solid fa-caret-up collapseCaret text-neutral scale-250 hover:cursor-pointer"></i>
                     </button>
                 </div>
                 <div class="flex justify-between">
@@ -169,7 +169,7 @@
                     class="absolute top-0 left-0 -translate-x-1/2 -translate-y-1/2 h-24" />
                 <div class="text-right">
                     <button type="button">
-                        <i class="fa-solid fa-caret-up text-neutral scale-250 hover:cursor-pointer"></i>
+                        <i class="fa-solid fa-caret-up collapseCaret text-neutral scale-250 hover:cursor-pointer"></i>
                     </button>
                 </div>
                 <div class="flex justify-between">
@@ -232,7 +232,7 @@
                     class="absolute top-0 left-5 -translate-x-1/2 -translate-y-1/2 h-20" />
                 <div class="text-right">
                     <button type="button">
-                        <i class="fa-solid fa-caret-up text-neutral scale-250 hover:cursor-pointer"></i>
+                        <i class="fa-solid fa-caret-up collapseCaret text-neutral scale-250 hover:cursor-pointer"></i>
                     </button>
                 </div>
                 <div class="flex justify-between">
@@ -305,7 +305,7 @@
                                     Work</h3>
                                 <div class="mb-12">
                                     <button type="button">
-                                        <i class="fa-solid fa-caret-up text-neutral scale-250 hover:cursor-pointer"></i>
+                                        <i class="fa-solid fa-caret-up collapseCaret text-neutral scale-250 hover:cursor-pointer"></i>
                                     </button>
                                 </div>
                             </div>
@@ -335,7 +335,7 @@
                                     Home</h3>
                                 <div class="mb-12">
                                     <button type="button">
-                                        <i class="fa-solid fa-caret-up text-neutral scale-250 hover:cursor-pointer"></i>
+                                        <i class="fa-solid fa-caret-up collapseCaret text-neutral scale-250 hover:cursor-pointer"></i>
                                     </button>
                                 </div>
                             </div>
@@ -365,7 +365,7 @@
                                     Menu</h3>
                                 <div class="mb-12">
                                     <button type="button">
-                                        <i class="fa-solid fa-caret-up text-neutral scale-250 hover:cursor-pointer"></i>
+                                        <i class="fa-solid fa-caret-up collapseCaret text-neutral scale-250 hover:cursor-pointer"></i>
                                     </button>
                                 </div>
                             </div>
@@ -398,7 +398,7 @@
                                     Notes</h3>
                                 <div class="mb-12">
                                     <button type="button">
-                                        <i class="fa-solid fa-caret-up text-neutral scale-250 hover:cursor-pointer"></i>
+                                        <i class="fa-solid fa-caret-up collapseCaret text-neutral scale-250 hover:cursor-pointer"></i>
                                     </button>
                                 </div>
                             </div>
@@ -429,7 +429,7 @@
                                     Groceries</h3>
                                 <div class="mb-12">
                                     <button type="button">
-                                        <i class="fa-solid fa-caret-up text-neutral scale-250 hover:cursor-pointer"></i>
+                                        <i class="fa-solid fa-caret-up collapseCaret text-neutral scale-250 hover:cursor-pointer"></i>
                                     </button>
                                 </div>
                             </div>
