--- a/public/index.html
+++ b/public/index.html
@@ -122,7 +122,7 @@
                     class="absolute top-0 left-0 -translate-x-1/2 -translate-y-1/2 h-20" />
                 <div class="text-right">
                     <button type="button">
-                        <i class="fa-solid fa-caret-up text-neutral scale-250 hover:cursor-pointer"></i>
+                        <i class="fa-solid fa-caret-up collapseCaret text-neutral scale-250 hover:cursor-pointer"></i>
                     </button>
                 </div>
                 <div class="flex justify-between">
@@ -183,7 +183,7 @@
                     class="absolute top-0 left-0 -translate-x-1/2 -translate-y-1/2 h-24" />
                 <div class="text-right">
                     <button type="button">
-                        <i class="fa-solid fa-caret-up text-neutral scale-250 hover:cursor-pointer"></i>
+                        <i class="fa-solid fa-caret-up collapseCaret text-neutral scale-250 hover:cursor-pointer"></i>
                     </button>
                 </div>
                 <div class="flex justify-between">
@@ -244,7 +244,7 @@
                     class="absolute top-0 left-5 -translate-x-1/2 -translate-y-1/2 h-20" />
                 <div class="text-right">
                     <button type="button">
-                        <i class="fa-solid fa-caret-up text-neutral scale-250 hover:cursor-pointer"></i>
+                        <i class="fa-solid fa-caret-up collapseCaret text-neutral scale-250 hover:cursor-pointer"></i>
                     </button>
                 </div>
                 <div class="flex justify-between">
@@ -315,7 +315,7 @@
                                     Work</h3>
                                 <div class="mb-12">
                                     <button type="button">
-                                        <i class="fa-solid fa-caret-up text-neutral scale-250 hover:cursor-pointer"></i>
+                                        <i class="fa-solid fa-caret-up collapseCaret text-neutral scale-250 hover:cursor-pointer"></i>
                                     </button>
                                 </div>
                             </div>
@@ -352,7 +352,7 @@
                                     Home</h3>
                                 <div class="mb-12">
                                     <button type="button">
-                                        <i class="fa-solid fa-caret-up text-neutral scale-250 hover:cursor-pointer"></i>
+                                        <i class="fa-solid fa-caret-up collapseCaret text-neutral scale-250 hover:cursor-pointer"></i>
                                     </button>
                                 </div>
                             </div>
@@ -389,7 +389,7 @@
                                     Menu</h3>
                                 <div class="mb-12">
                                     <button type="button">
-                                        <i class="fa-solid fa-caret-up text-neutral scale-250 hover:cursor-pointer"></i>
+                                        <i class="fa-solid fa-caret-up collapseCaret text-neutral scale-250 hover:cursor-pointer"></i>
                                     </button>
                                 </div>
                             </div>
@@ -424,7 +424,7 @@
                                     Notes</h3>
                                 <div class="mb-12">
                                     <button type="button">
-                                        <i class="fa-solid fa-caret-up text-neutral scale-250 hover:cursor-pointer"></i>
+                                        <i class="fa-solid fa-caret-up collapseCaret text-neutral scale-250 hover:cursor-pointer"></i>
                                     </button>
                                 </div>
                             </div>
@@ -456,7 +456,7 @@
                                     Groceries</h3>
                                 <div class="mb-12">
                                     <button type="button">
-                                        <i class="fa-solid fa-caret-up text-neutral scale-250 hover:cursor-pointer"></i>
+                                        <i class="fa-solid fa-caret-up collapseCaret text-neutral scale-250 hover:cursor-pointer"></i>
                                     </button>
                                 </div>
                             </div>
