lots of fixes hopefully

--- a/public/index.html
+++ b/public/index.html
@@ -122,11 +122,14 @@
                     class="absolute top-0 left-0 -translate-x-1/2 -translate-y-1/2 h-20" />
                 <div class="text-right">
                     <button type="button">
-                        <i class="fa-solid fa-caret-up collapseCardCaret text-neutral scale-250 hover:cursor-pointer"></i>
+                        <i
+                            class="fa-solid fa-caret-up collapseCardCaret text-neutral scale-250 hover:cursor-pointer"></i>
                     </button>
                 </div>
                 <div class="flex justify-between">
-                    <h3 class="text-4xl font-main font-bold text-main mb-4 tracking-widest underline underline-offset-4">Morning</h3>
+                    <h3
+                        class="text-4xl font-main font-bold text-main mb-4 tracking-widest underline underline-offset-4">
+                        Morning</h3>
                     <p class="text-3xl font-bold font-main self-center text-main">10:00 - 14:00</p>
                 </div>
 
@@ -156,10 +159,10 @@
                     <label class="flex items-center gap-3 cursor-pointer select-none">
                         <input type="checkbox" class="sr-only" />
                         <span data-role="box" class="inline-flex items-center justify-center size-6 rounded-full bg-white
-                         border-2 border-main transition-colors">
+                        border-2 border-main transition-colors">
                             <svg data-role="icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3"
-                                stroke-linecap="round" stroke-linejoin="round" class="size-4 text-main"
-                                style="opacity:0;transition:opacity .15s" aria-hidden="true">
+                                stroke-linecap="round" stroke-linejoin="round"
+                                class="size-4 text-main opacity-0 pointer-events-none" aria-hidden="true">
                                 <path d="M5 12l5 5L19 7" />
                             </svg>
                         </span>
@@ -183,11 +186,14 @@
                     class="absolute top-0 left-0 -translate-x-1/2 -translate-y-1/2 h-24" />
                 <div class="text-right">
                     <button type="button">
-                        <i class="fa-solid fa-caret-up collapseCardCaret text-neutral scale-250 hover:cursor-pointer"></i>
+                        <i
+                            class="fa-solid fa-caret-up collapseCardCaret text-neutral scale-250 hover:cursor-pointer"></i>
                     </button>
                 </div>
                 <div class="flex justify-between">
-                    <h3 class="text-4xl font-main font-bold text-main mb-4 tracking-widest underline underline-offset-4">Daytime</h3>
+                    <h3
+                        class="text-4xl font-main font-bold text-main mb-4 tracking-widest underline underline-offset-4">
+                        Daytime</h3>
                     <p class="text-3xl font-bold font-main self-center text-main">14:00 - 18:00</p>
                 </div>
 
@@ -216,19 +222,20 @@
                     <!-- same smoke block as above -->
                     <label class="flex items-center gap-3 cursor-pointer select-none">
                         <input type="checkbox" class="sr-only" />
-                        <span data-role="box"
-                            class="inline-flex items-center justify-center size-6 rounded-full bg-white border-2 border-main transition-colors">
+                        <span data-role="box" class="inline-flex items-center justify-center size-6 rounded-full bg-white
+     border-2 border-main transition-colors">
                             <svg data-role="icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3"
-                                stroke-linecap="round" stroke-linejoin="round" class="size-4 text-main"
-                                style="opacity:0;transition:opacity .15s" aria-hidden="true">
+                                stroke-linecap="round" stroke-linejoin="round"
+                                class="size-4 text-main opacity-0 pointer-events-none" aria-hidden="true">
                                 <path d="M5 12l5 5L19 7" />
                             </svg>
                         </span>
-                        <span data-role="label"
-                            class="flex-1 text-accents font-bold tracking-wide text-xl font-sec decoration-main decoration-2 mt-3">
+                        <span data-role="label" class="flex-1 text-accents font-bold tracking-wide text-xl font-sec
+     decoration-main decoration-2 mt-3">
                             Smoke break?
                         </span>
                     </label>
+
                 </div>
                 <div class="mt-3 hover:cursor-pointer text-right">
                     <button type="button" data-template-save
@@ -244,11 +251,14 @@
                     class="absolute top-0 left-5 -translate-x-1/2 -translate-y-1/2 h-20" />
                 <div class="text-right">
                     <button type="button">
-                        <i class="fa-solid fa-caret-up collapseCardCaret text-neutral scale-250 hover:cursor-pointer"></i>
+                        <i
+                            class="fa-solid fa-caret-up collapseCardCaret text-neutral scale-250 hover:cursor-pointer"></i>
                     </button>
                 </div>
                 <div class="flex justify-between">
-                    <h3 class="text-4xl font-main font-bold text-main mb-4 tracking-widest underline underline-offset-4">Evening</h3>
+                    <h3
+                        class="text-4xl font-main font-bold text-main mb-4 tracking-widest underline underline-offset-4">
+                        Evening</h3>
                     <p class="text-3xl font-bold font-main self-center text-main">18:00 - 22:00</p>
                 </div>
 
@@ -277,19 +287,20 @@
                     <!-- same smoke block -->
                     <label class="flex items-center gap-3 cursor-pointer select-none">
                         <input type="checkbox" class="sr-only" />
-                        <span data-role="box"
-                            class="inline-flex items-center justify-center size-6 rounded-full bg-white border-2 border-main transition-colors">
+                        <span data-role="box" class="inline-flex items-center justify-center size-6 rounded-full bg-white
+     border-2 border-main transition-colors">
                             <svg data-role="icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3"
-                                stroke-linecap="round" stroke-linejoin="round" class="size-4 text-main"
-                                style="opacity:0;transition:opacity .15s" aria-hidden="true">
+                                stroke-linecap="round" stroke-linejoin="round"
+                                class="size-4 text-main opacity-0 pointer-events-none" aria-hidden="true">
                                 <path d="M5 12l5 5L19 7" />
                             </svg>
                         </span>
-                        <span data-role="label"
-                            class="flex-1 text-accents font-bold tracking-wide text-xl font-sec decoration-main decoration-2 mt-3">
+                        <span data-role="label" class="flex-1 text-accents font-bold tracking-wide text-xl font-sec
+     decoration-main decoration-2 mt-3">
                             Smoke break?
                         </span>
                     </label>
+
                 </div>
                 <div class="mt-3 hover:cursor-pointer text-right">
                     <button type="button" data-template-save
@@ -315,7 +326,8 @@
                                     Work</h3>
                                 <div class="mb-12">
                                     <button type="button">
-                                        <i class="fa-solid fa-caret-up collapseCardCaret text-neutral scale-250 hover:cursor-pointer"></i>
+                                        <i
+                                            class="fa-solid fa-caret-up collapseCardCaret text-neutral scale-250 hover:cursor-pointer"></i>
                                     </button>
                                 </div>
                             </div>
@@ -352,7 +364,8 @@
                                     Home</h3>
                                 <div class="mb-12">
                                     <button type="button">
-                                        <i class="fa-solid fa-caret-up collapseCardCaret text-neutral scale-250 hover:cursor-pointer"></i>
+                                        <i
+                                            class="fa-solid fa-caret-up collapseCardCaret text-neutral scale-250 hover:cursor-pointer"></i>
                                     </button>
                                 </div>
                             </div>
@@ -389,7 +402,8 @@
                                     Menu</h3>
                                 <div class="mb-12">
                                     <button type="button">
-                                        <i class="fa-solid fa-caret-up collapseCardCaret text-neutral scale-250 hover:cursor-pointer"></i>
+                                        <i
+                                            class="fa-solid fa-caret-up collapseCardCaret text-neutral scale-250 hover:cursor-pointer"></i>
                                     </button>
                                 </div>
                             </div>
@@ -424,7 +438,8 @@
                                     Notes</h3>
                                 <div class="mb-12">
                                     <button type="button">
-                                        <i class="fa-solid fa-caret-up collapseCardCaret text-neutral scale-250 hover:cursor-pointer"></i>
+                                        <i
+                                            class="fa-solid fa-caret-up collapseCardCaret text-neutral scale-250 hover:cursor-pointer"></i>
                                     </button>
                                 </div>
                             </div>
@@ -456,7 +471,8 @@
                                     Groceries</h3>
                                 <div class="mb-12">
                                     <button type="button">
-                                        <i class="fa-solid fa-caret-up collapseCardCaret text-neutral scale-250 hover:cursor-pointer"></i>
+                                        <i
+                                            class="fa-solid fa-caret-up collapseCardCaret text-neutral scale-250 hover:cursor-pointer"></i>
                                     </button>
                                 </div>
                             </div>
