--- a/public/tomorrow.html
+++ b/public/tomorrow.html
@@ -106,7 +106,8 @@
                     class="absolute top-0 left-0 -translate-x-1/2 -translate-y-1/2 h-20" />
                 <div class="text-right">
                     <button type="button">
-                        <i class="fa-solid fa-caret-up collapseCardCaret text-neutral scale-250 hover:cursor-pointer"></i>
+                        <i
+                            class="fa-solid fa-caret-up collapseCardCaret text-neutral scale-250 hover:cursor-pointer"></i>
                     </button>
                 </div>
                 <div class="flex justify-between">
@@ -142,18 +143,19 @@
                     <label class="flex items-center gap-3 cursor-pointer select-none">
                         <input type="checkbox" class="sr-only" />
                         <span data-role="box" class="inline-flex items-center justify-center size-6 rounded-full bg-white
-                         border-2 border-main transition-colors">
+     border-2 border-main transition-colors">
                             <svg data-role="icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3"
-                                stroke-linecap="round" stroke-linejoin="round" class="size-4 text-main"
-                                style="opacity:0;transition:opacity .15s" aria-hidden="true">
+                                stroke-linecap="round" stroke-linejoin="round"
+                                class="size-4 text-main opacity-0 pointer-events-none" aria-hidden="true">
                                 <path d="M5 12l5 5L19 7" />
                             </svg>
                         </span>
                         <span data-role="label" class="flex-1 text-accents font-bold tracking-wide text-xl font-sec
-                         decoration-main decoration-2 mt-3">
+     decoration-main decoration-2 mt-3">
                             Smoke break?
                         </span>
                     </label>
+
                 </div>
                 <div class="mt-3 hover:cursor-pointer text-right">
                     <button type="button" data-template-save
@@ -169,7 +171,8 @@
                     class="absolute top-0 left-0 -translate-x-1/2 -translate-y-1/2 h-24" />
                 <div class="text-right">
                     <button type="button">
-                        <i class="fa-solid fa-caret-up collapseCardCaret text-neutral scale-250 hover:cursor-pointer"></i>
+                        <i
+                            class="fa-solid fa-caret-up collapseCardCaret text-neutral scale-250 hover:cursor-pointer"></i>
                     </button>
                 </div>
                 <div class="flex justify-between">
@@ -201,22 +204,22 @@
                 <ul class="mt-4 rounded-lg bg-white" data-checklist-list></ul>
                 <hr class="mt-4 border-1 w-[75%] mx-auto border-b border-main/40 rounded-full" />
                 <div class="mt-4" data-smoke>
-                    <!-- same smoke block as above -->
                     <label class="flex items-center gap-3 cursor-pointer select-none">
                         <input type="checkbox" class="sr-only" />
-                        <span data-role="box"
-                            class="inline-flex items-center justify-center size-6 rounded-full bg-white border-2 border-main transition-colors">
+                        <span data-role="box" class="inline-flex items-center justify-center size-6 rounded-full bg-white
+     border-2 border-main transition-colors">
                             <svg data-role="icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3"
-                                stroke-linecap="round" stroke-linejoin="round" class="size-4 text-main"
-                                style="opacity:0;transition:opacity .15s" aria-hidden="true">
+                                stroke-linecap="round" stroke-linejoin="round"
+                                class="size-4 text-main opacity-0 pointer-events-none" aria-hidden="true">
                                 <path d="M5 12l5 5L19 7" />
                             </svg>
                         </span>
-                        <span data-role="label"
-                            class="flex-1 text-accents font-bold tracking-wide text-xl font-sec decoration-main decoration-2 mt-3">
+                        <span data-role="label" class="flex-1 text-accents font-bold tracking-wide text-xl font-sec
+     decoration-main decoration-2 mt-3">
                             Smoke break?
                         </span>
                     </label>
+
                 </div>
                 <div class="mt-3 hover:cursor-pointer text-right">
                     <button type="button" data-template-save
@@ -232,7 +235,8 @@
                     class="absolute top-0 left-5 -translate-x-1/2 -translate-y-1/2 h-20" />
                 <div class="text-right">
                     <button type="button">
-                        <i class="fa-solid fa-caret-up collapseCardCaret text-neutral scale-250 hover:cursor-pointer"></i>
+                        <i
+                            class="fa-solid fa-caret-up collapseCardCaret text-neutral scale-250 hover:cursor-pointer"></i>
                     </button>
                 </div>
                 <div class="flex justify-between">
@@ -264,22 +268,22 @@
                 <ul class="mt-4 rounded-lg bg-white" data-checklist-list></ul>
                 <hr class="mt-4 border-1 w-[75%] mx-auto border-b border-main/40 rounded-full" />
                 <div class="mt-4" data-smoke>
-                    <!-- same smoke block -->
                     <label class="flex items-center gap-3 cursor-pointer select-none">
                         <input type="checkbox" class="sr-only" />
-                        <span data-role="box"
-                            class="inline-flex items-center justify-center size-6 rounded-full bg-white border-2 border-main transition-colors">
+                        <span data-role="box" class="inline-flex items-center justify-center size-6 rounded-full bg-white
+     border-2 border-main transition-colors">
                             <svg data-role="icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3"
-                                stroke-linecap="round" stroke-linejoin="round" class="size-4 text-main"
-                                style="opacity:0;transition:opacity .15s" aria-hidden="true">
+                                stroke-linecap="round" stroke-linejoin="round"
+                                class="size-4 text-main opacity-0 pointer-events-none" aria-hidden="true">
                                 <path d="M5 12l5 5L19 7" />
                             </svg>
                         </span>
-                        <span data-role="label"
-                            class="flex-1 text-accents font-bold tracking-wide text-xl font-sec decoration-main decoration-2 mt-3">
+                        <span data-role="label" class="flex-1 text-accents font-bold tracking-wide text-xl font-sec
+     decoration-main decoration-2 mt-3">
                             Smoke break?
                         </span>
                     </label>
+
                 </div>
                 <div class="mt-3 hover:cursor-pointer text-right">
                     <button type="button" data-template-save
@@ -305,7 +309,8 @@
                                     Work</h3>
                                 <div class="mb-12">
                                     <button type="button">
-                                        <i class="fa-solid fa-caret-up collapseCardCaret text-neutral scale-250 hover:cursor-pointer"></i>
+                                        <i
+                                            class="fa-solid fa-caret-up collapseCardCaret text-neutral scale-250 hover:cursor-pointer"></i>
                                     </button>
                                 </div>
                             </div>
@@ -335,7 +340,8 @@
                                     Home</h3>
                                 <div class="mb-12">
                                     <button type="button">
-                                        <i class="fa-solid fa-caret-up collapseCardCaret text-neutral scale-250 hover:cursor-pointer"></i>
+                                        <i
+                                            class="fa-solid fa-caret-up collapseCardCaret text-neutral scale-250 hover:cursor-pointer"></i>
                                     </button>
                                 </div>
                             </div>
@@ -365,7 +371,8 @@
                                     Menu</h3>
                                 <div class="mb-12">
                                     <button type="button">
-                                        <i class="fa-solid fa-caret-up collapseCardCaret text-neutral scale-250 hover:cursor-pointer"></i>
+                                        <i
+                                            class="fa-solid fa-caret-up collapseCardCaret text-neutral scale-250 hover:cursor-pointer"></i>
                                     </button>
                                 </div>
                             </div>
@@ -398,7 +405,8 @@
                                     Notes</h3>
                                 <div class="mb-12">
                                     <button type="button">
-                                        <i class="fa-solid fa-caret-up collapseCardCaret text-neutral scale-250 hover:cursor-pointer"></i>
+                                        <i
+                                            class="fa-solid fa-caret-up collapseCardCaret text-neutral scale-250 hover:cursor-pointer"></i>
                                     </button>
                                 </div>
                             </div>
@@ -429,7 +437,8 @@
                                     Groceries</h3>
                                 <div class="mb-12">
                                     <button type="button">
-                                        <i class="fa-solid fa-caret-up collapseCardCaret text-neutral scale-250 hover:cursor-pointer"></i>
+                                        <i
+                                            class="fa-solid fa-caret-up collapseCardCaret text-neutral scale-250 hover:cursor-pointer"></i>
                                     </button>
                                 </div>
                             </div>
